# HashChat

./: Cargo.toml  File: .gitignore  File: README.md  File: build.py  File: hashchat.cabal  LICENSE  README.md  build.py  hashchat.cabal
.github/workflows/: build.yml
File: .vscode/: settings.json  tasks.json
File: .vscode/File: .vscode/: launch.json
File: android/File: android/src/main/java/chat/hashchat/File: android/src/main/res/layout/: activity_main.xml
File: android/File: android/src/main/java/chat/hashchat/File: android/src/main/res/layout/File: android/src/main/res/values/File: android/src/main/res/values/: themes.xml
File: src/haskell/HashChat/: Core.hs
File: src/haskell/HashChat/File: src/haskell/HashChat/: Profile.hs
File: src/haskell/HashChat/File: src/haskell/HashChat/File: src/haskell/HashChat/File: src/haskell/HashChat/File: src/haskell/HashChat/: Contact.hs
File: src/haskell/HashChat/File: src/haskell/HashChat/File: src/haskell/HashChat/File: src/haskell/HashChat/File: src/haskell/HashChat/File: src/haskell/HashChat/File: src/haskell/HashChat/: Call.hs
android/: build.gradle.kts
android/src/main/java/: MainActivity.kt
android/src/main/res/values/: colors.xml
src/haskell/: Desktop.hs  Main.hs
src/haskell/HashChat/: FileTransfer.hs  Queue.hs  Security.hs  Settings.hs  Voice.hs
src/rust/: lib.rs
tor/: torrc
