cabal-version: 3.0
name: hashchat
version: 0.1.9
build-type: Simple
library
  exposed-modules: HashChat.Core HashChat.Profile HashChat.Queue HashChat.FileTransfer HashChat.Contact HashChat.Voice HashChat.Call HashChat.Settings HashChat.Security HashChat.Group HashChat.Chat
  build-depends: base, stm, cryptonite, memory, sqlite-simple, bytestring, time, text
  hs-source-dirs: src/haskell
  default-language: Haskell2010
executable hashchat-desktop
  main-is: Desktop.hs
  hs-source-dirs: src/haskell
  build-depends: hashchat, gi-gtk
  default-language: Haskell2010
executable hashchat-cli
  main-is: Main.hs
  hs-source-dirs: src/haskell
  build-depends: hashchat
  default-language: Haskell2010